# nexus

./: .gitignore  README.md  docker-compose.yml
cpp-worker/: CMakeLists.txt  Dockerfile  README.md
cpp-worker/src/: main.cpp
cpp-worker/src/messaging/: HttpClient.cpp  HttpClient.h
cpp-worker/src/utils/: ThreadPool.cpp  ThreadPool.h
cpp-worker/src/worker/: JobExecutor.cpp  JobExecutor.h  Worker.cpp  Worker.h
frontend/: Dockerfile  README.md  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/jobs/[id]/: page.tsx
frontend/src/app/workers/: page.tsx
frontend/src/components/: JobProgress.tsx  JobTable.tsx  MetricsChart.tsx  WorkerStatus.tsx
frontend/src/lib/: api.ts  types.ts  websocket.ts
frontend/src/styles/: globals.css
frontend/src/types/: sockjs-client.d.ts
scheduler-service/: Dockerfile  README.md  mvnw.cmd  pom.xml
scheduler-service/src/main/java/com/example/scheduler/: SchedulerApplication.java
scheduler-service/src/main/java/com/example/scheduler/config/: CorsConfig.java  WebSocketConfig.java
scheduler-service/src/main/java/com/example/scheduler/controller/: JobController.java  WorkerController.java
scheduler-service/src/main/java/com/example/scheduler/domain/: Job.java  JobExecution.java  JobStatus.java  Worker.java  WorkerStatus.java
scheduler-service/src/main/java/com/example/scheduler/dto/: JobDto.java  JobRequest.java  RegisterWorkerRequest.java  WorkerCommandDto.java  WorkerDto.java  WorkerEventRequest.java
scheduler-service/src/main/resources/: application.yml
(+9 files in other folders)
